[package]
name = "esp-clock-nostd"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mipidsi                 = { git = "https://github.com/almindor/mipidsi" }
smoltcp                 = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"]}
display-interface       = "0.4.1"
display-interface-spi   = "0.4.1"
embedded-graphics       = "0.7.1"
embedded-graphics-core  = "0.3.3"
embedded-hal            = "0.2.7"
profont                 = "0.6.1"
fugit                   = "0.3.6"
libm                    = "0.2.6"
cfg-if                  = "1.0.0"
toml-cfg                = "0.1.3"
embedded-io             = "0.4.0"
embassy-futures         = { version = "0.1.0" }
futures-util            = { version = "0.3.17", default-features = false }
embassy-time            = { version = "0.1.0", features = ["nightly"] }
embassy-net             = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor        = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embedded-svc            = { version = "0.23.1", default-features = false, features = [] }
bleps                   = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "33fde67257bfbc6c0aebf7649fd302c82ed94c64" }
bleps-macros            = { git = "https://github.com/bjoernQ/bleps", package = "bleps-macros", rev = "33fde67257bfbc6c0aebf7649fd302c82ed94c64" }
heapless                = { version = "0.7.14", default-features = false }
lexical-core            = {version = "0.8.5", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"]}
linked_list_allocator   = { version = "0.10.3", default-features = false, features = ["const_mut_refs"] }


[target.xtensa-esp32-none-elf.dependencies]
esp32-hal = { version = "0.11.0", optional = true, features = [ "rt" ] }
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32","esp32-async", "esp-now", "ble"]}
esp-println = { version = "0.4.0", features = ["esp32"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.6.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }

[target.xtensa-esp32s2-none-elf.dependencies]
esp32s2-hal = { version = "0.8.0", optional = true, features = [ "rt" ] }
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32s2","esp32s2-async", "esp-now", "ble"]}
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.6.0", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.4.0", features = [ "esp32s2" ] }

[target.xtensa-esp32s3-none-elf.dependencies]
esp32s3-hal = { version = "0.8.0", optional = true, features = [ "rt" ] }
esp-wifi = {git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32s3","esp32s3-async", "esp-now", "ble"]}
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.6.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.4.0", features = [ "esp32s3" ] }

[target.riscv32imc-unknown-none-elf.dependencies]
esp32c3-hal = { version = "0.8.0", optional = true }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32c3", "embedded-svc", "wifi"]}
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.4.0", features = [ "esp32c3" ] }

[features]
default = ["rt", "eh1", "wifi"]
rt = [] # for esp32c3 chip
# eh1 = ["esp32s3"]
# eh1 = ["esp32-hal/eh1", "esp32"]
# eh1 = ["esp32s2-hal/eh1", "esp32s2"]
eh1 = ["esp32c3-hal/eh1", "esp32c3"]

esp32 = []
esp32s2 = []
esp32s3 = []
esp32c3 = []

wifi = []
